--- a/portfolio.html
+++ b/portfolio.html
@@ -19,22 +19,22 @@
         <header class="header">
         <div class="container">
             <nav class="navigation">
-                <a class="logo link" href="./index.html"><span class="first-part">Web</span><span
-                        class="second-part logo-light-theme">Studio</span></a>
-                <ul class="navigation-list list">
-                    <li class="navigation-item">
-                        <a class="navigation-link link " href="./index.html">Студия</a>
+                <a class="logo link" href="./index.html"><span class="logo__first-part">Web</span><span
+                        class="logo__second-part logo__light-theme">Studio</span></a>
+                <ul class="menu list">
+                    <li class="menu__item">
+                        <a class="menu__link link " href="./index.html">Студия</a>
                     </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link link current" href="./portfolio.html">Портфолио</a>
+                    <li class="menu__item">
+                        <a class="menu__link link current" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link link" href="">Контакты</a>
+                    <li class="menu__item">
+                        <a class="menu__link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
     
-            <ul class="contact-header list reset-list">
+            <ul class="contact-header list ">
                 <li class="contact-header-list">
                     <a class="contact-header-link link" href="mailto:info@devstudio.com">
                         <svg class="contact-svg-logo" width="16" height="12">
@@ -79,7 +79,7 @@
                         </li>
                     </ul> 
                         <!-- PROJECT  -->
-                    <ul class="project-list list reset-list ">
+                    <ul class="project-list list  ">
                         <li class="project-list-item link">
                             <a href="" class="project-list-link link">
                                 <div class="project-list-link-wrapper">
@@ -240,8 +240,8 @@
         <!-- contact information --><footer class="footer">
             <div class="container">
                 <div class="footer-address-contact">
-                    <a class="logo link link-db" href="./index.html"><span class="first-part">Web</span><span
-                            class="second-part logo-dark-theme">Studio</span></a>
+                    <a class="logo link link-db" href="./index.html"><span class="logo__first-part">Web</span><span
+                            class="logo__second-part logo__dark-theme">Studio</span></a>
                     <address class="address">
                         <ul class="contact-list list ">
                             <li class="contact-list-item">
