--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <header class="header">
             <div class="container">
                 <nav class="navigation">
-                    <a class="logo link" href="./index.html"><span class="first-part">Web</span><span class="second-part logo-light-theme">Studio</span></a>
-                    <ul class="navigation-list list">
-                        <li class="navigation-item">  
-                            <a class="navigation-link link current" href="./index.html">Студия</a>
+                    <a class="logo link" href="./index.html"><span class="logo__first-part">Web</span><span class="logo__second-part logo__light-theme">Studio</span></a>
+                    <ul class="menu list">
+                        <li class="menu__item">  
+                            <a class="menu__link link current" href="./index.html">Студия</a>
                         </li>
-                        <li class="navigation-item">
-                            <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
+                        <li class="menu__item">
+                            <a class="menu__link link" href="./portfolio.html">Портфолио</a>
                         </li>
-                        <li class="navigation-item">
-                            <a class="navigation-link link" href="">Контакты</a>
+                        <li class="menu__item">
+                            <a class="menu__link link" href="">Контакты</a>
                         </li>
                     </ul>   
                 </nav>
@@ -376,8 +376,8 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-address-contact">
-                    <a class="logo link link-db" href="./index.html"><span class="first-part">Web</span><span
-                            class="second-part logo-dark-theme">Studio</span></a>
+                    <a class="logo link link-db" href="./index.html"><span class="logo__first-part">Web</span><span
+                            class="logo__second-part logo__dark-theme">Studio</span></a>
                     <address class="address">
                         <ul class="contact-list list ">
                             <li class="contact-list-item">
@@ -479,7 +479,7 @@
                     <label class="modal-form-field">
                         Почта
                         <span class="modal-form-input-wrapper">
-                            <input type="email" name="user-email" class="modal-form-input" required title="imail@net">
+                            <input type="email" name="user-email" class="modal-form-input" required title="email@net">
                             <svg class="modal-form-icon" width="15" height="12">
                                 <use href="./images/sprite.svg#icon-email"></use>
                             </svg>
