--- a/index.html
+++ b/index.html
@@ -58,59 +58,60 @@
             <!-- hero -->
             <section class="hero">
                 <div class="container">
-                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                    <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button> 
+                    <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                    <button class="hero__modal-btn" type="button" data-modal-open>Заказать услугу</button> 
                 </div>
                 
             </section>
             <!-- features -->
             <section class="features">
                 <div class="container">
-                    <h2 class="title visually-hidden">Особенности</h2><ul class="feature-list list ">
-                        <li class="feature-list-item">
-                            <div class="feature-list-logo-svg">
-                                <svg class="feature-list-svg" width="70" height="70">
+                    <h2 class="title visually-hidden">Особенности</h2>
+                    <ul class="feature-list list ">
+                        <li class="feature-list__item">
+                            <div class="feature-list__logo-svg">
+                                <svg class="feature-list__svg" width="70" height="70">
                                     <use href="./images/sprite.svg#icon-antenna"></use>
                                 </svg>
                             </div>
-                            <h3 class="feature-title">Внимание к деталям </h3>
-                            <p class="features-text">
+                            <h3 class="feature-list__title">Внимание к деталям </h3>
+                            <p class="feature-list__text">
                                 Идейные соображения, а также начало повседневной
                                 работы по формированию позиции.
                             </p>
                         </li>
-                        <li class="feature-list-item">
-                            <div class="feature-list-logo-svg">
-                                <svg class="feature-list-svg" width="70" height="70">
+                        <li class="feature-list__item">
+                            <div class="feature-list__logo-svg">
+                                <svg class="feature-list__svg" width="70" height="70">
                                     <use href="./images/sprite.svg#icon-clock"></use>
                                 </svg>
                             </div>
-                            <h3 class="feature-title">Пунктуальность</h3>
-                            <p class="features-text">
+                            <h3 class="feature-list__title">Пунктуальность</h3>
+                            <p class="feature-list__text">
                                 Задача организации, в особенности же рамки
                                 и место обучения кадров влечет за собой.
                             </p>
                         </li>
-                        <li class="feature-list-item">
-                            <div class="feature-list-logo-svg">
-                                <svg class="feature-list-svg" width="70" height="70">
+                        <li class="feature-list__item">
+                            <div class="feature-list__logo-svg">
+                                <svg class="feature-list__svg" width="70" height="70">
                                     <use href="./images/sprite.svg#icon-diagram"></use>
                                 </svg>
                             </div>
-                            <h3 class="feature-title">Планирование</h3>
-                            <p class="features-text">
+                            <h3 class="feature-list__title">Планирование</h3>
+                            <p class="feature-list__text">
                                 Равным образом консультация с широким
                                 активом в значительной степени обуславливает.
                             </p>
                         </li>
-                        <li class="feature-list-item">
-                            <div class="feature-list-logo-svg">
-                                <svg class="feature-list-svg" width="70" height="70">
+                        <li class="feature-list__item">
+                            <div class="feature-list__logo-svg">
+                                <svg class="feature-list__svg" width="70" height="70">
                                     <use href="./images/sprite.svg#icon-astronaut"></use>
                                 </svg>
                             </div>
-                            <h3 class="feature-title">Современные технологии</h3>
-                            <p class="features-text">
+                            <h3 class="feature-list__title">Современные технологии</h3>
+                            <p class="feature-list__text">
                                 Значимость этих проблем настолько
                                 очевидна, что реализация плановых заданий.
                             </p>
@@ -124,17 +125,17 @@
                 <div class="container">
                     <h2 class="title">Чем мы занимаемся</h2>
                     <ul class="services-list list">
-                        <li class="services-list-item">
-                            <img class="services-list-img" src="./images/body/logo_0.jpg" alt="человек набирает текст" width="370" height="294">
-                            <p class="label">Десктопные приложения</p>
+                        <li class="services-list__item">
+                            <img class="services-list__img" src="./images/body/logo_0.jpg" alt="человек набирает текст" width="370" height="294">
+                            <p class="services-list__label">Десктопные приложения</p>
                         </li>
-                        <li class="services-list-item">
-                            <img class="services-list-img" src="./images/body/logo_1.jpg" alt="человек держит телефон перед ноутбуком" width="370" height="294">
-                            <p class="label">Мобильные приложения</p>
+                        <li class="services-list__item">
+                            <img class="services-list__img" src="./images/body/logo_1.jpg" alt="человек держит телефон перед ноутбуком" width="370" height="294">
+                            <p class="services-list__label">Мобильные приложения</p>
                         </li>
-                        <li class="services-list-item">
-                            <img class="services-list-img" src="./images/body/logo_2.jpg" alt="человек выбирает цвет пикселя" width="370" height="294">
-                            <p class="label">Дизайнерские решения </p>
+                        <li class="services-list__item">
+                            <img class="services-list__img" src="./images/body/logo_2.jpg" alt="человек выбирает цвет пикселя" width="370" height="294">
+                            <p class="services-list__label">Дизайнерские решения </p>
                         </li>
                     </ul> 
                 </div>
@@ -143,7 +144,8 @@
             <!-- team -->
             <section class="team-sections">
                 <div class="container">
-                    <h2 class="title title-team">Наша команда</h2><ul class="team-list list">
+                    <h2 class="title title-team">Наша команда</h2>
+                    <ul class="team-list list">
                         <li class="team-list-item">
                             <img class="team-list-img" src="./images/team/img.jpg" alt="Игорь Демьяненко" width="270" height="260">
                             <div class="team-list-content-wrapper">
