--- a/portfolio.html
+++ b/portfolio.html
@@ -19,32 +19,32 @@
         <header class="header">
         <div class="container">
             <nav class="navigation">
-                <a class="logo link" href="./index.html"><span class="logo__first-part">Web</span><span
+                <a class="logo header__logo link" href="./index.html"><span class="logo__first-part">Web</span><span
                         class="logo__second-part logo__light-theme">Studio</span></a>
                 <ul class="menu list">
                     <li class="menu__item">
-                        <a class="menu__link link " href="./index.html">Студия</a>
+                        <a class="menu__link header__link header__link_animation link " href="./index.html">Студия</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link current" href="./portfolio.html">Портфолио</a>
+                        <a class="menu__link header__link header__link_animation link current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link link" href="">Контакты</a>
+                        <a class="menu__link header__link header__link_animation link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
     
-            <ul class="contact-header list ">
-                <li class="contact-header-list">
-                    <a class="contact-header-link link" href="mailto:info@devstudio.com">
+            <ul class="contact header__contact  list ">
+                <li class="contact__list">
+                    <a class="contact__link contact__link_animation link" href="mailto:info@devstudio.com">
                         <svg class="contact-svg-logo" width="16" height="12">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="contact-header-list">
-                    <a class="contact-header-link link" href="tel:+380961111111">
+                <li class="contact__list">
+                    <a class="contact__link contact__link_animation link" href="tel:+380961111111">
                         <svg class="contact-svg-logo" width="10" height="16">
                             <use href="./images/sprite.svg#icon-smartphone">
                             </use>
