--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <section class="features">
                 <div class="container">
                     <h2 class="title visually-hidden">Особенности</h2>
-                    <ul class="feature-list list ">
+                    <ul class="feature-list feature-list__list list ">
                         <li class="feature-list__item">
                             <div class="feature-list__logo-svg">
                                 <svg class="feature-list__svg" width="70" height="70">
@@ -123,7 +123,7 @@
             <!-- what are we doing -->
             <section class="what-are-we-doing">
                 <div class="container">
-                    <h2 class="title">Чем мы занимаемся</h2>
+                    <h2 class="title what-are-we-doing__title">Чем мы занимаемся</h2>
                     <ul class="services-list list">
                         <li class="services-list__item">
                             <img class="services-list__img" src="./images/body/logo_0.jpg" alt="человек набирает текст" width="370" height="294">
