--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                 
             </section>
             <!-- team -->
-            <section class="team-sections">
+            <section class="team">
                 <div class="container">
-                    <h2 class="title title-team">Наша команда</h2>
+                    <h2 class="title title-team team__title">Наша команда</h2>
                     <ul class="team-list list">
                         <li class="team-list__item">
                             <img class="team-list__img" src="./images/team/img.jpg" alt="Игорь Демьяненко" width="270" height="260">
