--- a/index.html
+++ b/index.html
@@ -374,32 +374,32 @@
                 </div>
             </section>
         </main>
-        <!-- contact information -->
+        <!------ contact information ------->
         <footer class="footer">
             <div class="container">
-                <div class="footer-address-contact">
-                    <a class="logo link link-db" href="./index.html"><span class="logo__first-part">Web</span><span
+                <div class="footer__contact">
+                    <a class="logo footer__logo link link-db" href="./index.html"><span class="logo__first-part">Web</span><span
                             class="logo__second-part logo__dark-theme">Studio</span></a>
                     <address class="address">
-                        <ul class="contact-list list ">
-                            <li class="contact-list-item">
-                                <a class="contact-address link link-db" href="https://goo.gl/maps/KrXVA7ucvxgBEwCo6"
+                        <ul class="address__contact-list list ">
+                            <li class="address__contact-list-item">
+                                <a class="address__contact-link footer__contact-link link link-db" href="https://goo.gl/maps/KrXVA7ucvxgBEwCo6"
                                     target="_blank" rel="noopener noreferrer">
                                     г. Киев, пр-т Леси Украинки, 26
                                 </a>
                             </li>
-                            <li class="contact-list-item">
-                                <a class="contact-list-link link link-db" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            <li class="address__contact-list-item">
+                                <a class="address__contact-list-link link link-db" href="mailto:info@devstudio.com">info@devstudio.com</a>
                             </li>
-                            <li class="contact-list-item">
-                                <a class="contact-list-link link link-db" href="tel:+380961111111">+38 096 111 11 11</a>
+                            <li class="address__contact-list-item">
+                                <a class="address__contact-list-link link link-db" href="tel:+380961111111">+38 096 111 11 11</a>
                             </li>
                         </ul>
                     </address>
         
                 </div>
-                <div class="footer-social-link">
-                    <h2 class="logo">присоединяйтесь</h2>
+                <div class="footer__social-link">
+                    <h2 class="footer__title">присоединяйтесь</h2>
                     <ul class="contact-list-social-link list ">
                         <li class="contact-social-item link">
                             <a href="" class="social-link-item">
