--- a/portfolio.html
+++ b/portfolio.html
@@ -263,31 +263,31 @@
                 </div>
                 <div class="footer__social-link">
                     <h2 class="footer__title">присоединяйтесь</h2>
-                    <ul class="contact-list-social-link list ">
-                        <li class="contact-social-item link">
-                            <a href="" class="social-link-item">
-                                <svg class="social-link-svg" width="20" height="20">
+                    <ul class="footer__contact-link list ">
+                        <li class="footer__contact-item link">
+                            <a href="" class="footer__social-link-item">
+                                <svg class="footer__social-link-svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="contact-social-item link">
-                            <a href="" class="social-link-item">
-                                <svg class="social-link-svg" width="20" height="20">
+                        <li class="footer__contact-item link">
+                            <a href="" class="footer__social-link-item">
+                                <svg class="footer__social-link-svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="contact-social-item link">
-                            <a href="" class="social-link-item">
-                                <svg class="social-link-svg" width="20" height="20">
+                        <li class="footer__contact-item link">
+                            <a href="" class="footer__social-link-item">
+                                <svg class="footer__social-link-svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="contact-social-item link">
-                            <a href="" class="social-link-item">
-                                <svg class="social-link-svg" width="20" height="20">
+                        <li class="footer__contact-item link">
+                            <a href="" class="footer__social-link-item">
+                                <svg class="footer__social-link-svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -295,15 +295,15 @@
                     </ul>
         
                 </div>
-                <div class="footer-input">
-                    <b class="footer-input-text">Подпишитесь на рассылку</b>
-                    <form action="#" class="footer-input-email">
+                <div class="input footer__input">
+                    <b class="input__text">Подпишитесь на рассылку</b>
+                    <form action="#" class="input__email footer__email">
                         <label class="footer-input-field">
-                            <input type="email" name="user-email" class="footer-input-form" required placeholder="E-mail">
+                            <input type="email" name="user-email" class="input__form" required placeholder="E-mail">
                         </label>
-                        <button type="submit" class="footer-form-btn">
+                        <button type="submit" class="input__form-btn footer__form-btn">
                             Подписаться
-                            <svg class="footer-form-btn-svg" width="20" height="20">
+                            <svg class="input__btn-svg footer__btn-svg" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-icon-send"></use>
                             </svg>
                         </button>
