--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 </div>
             </section>
         </main>
-        <!------ contact information ------->
+        <!-- contact information -->
         <footer class="footer">
             <div class="container">
                 <div class="footer__contact">
