--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         
                 </div>
                 <div class="footer__social-link">
-                    <h2 class="footer__title">присоединяйтесь</h2>
+                    <b class="footer__title">присоединяйтесь</b>
                     <ul class="footer__contact-link list ">
                         <li class="footer__contact-item link">
                             <a href="" class="footer__social-link-item">
